# lab04

./: README.md
.github/workflows/: Configuration.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  equation
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
