cmake_minimum_required(VERSION 3.4)
project(solver)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(formatter STATIC /home/n3root/VadimSmD/workspace/projects/lab03/formatter_lib/formatter.cpp)
add_library(formatter_ex STATIC /home/n3root/VadimSmD/workspace/projects/lab03/formatter_ex_lib/formatter_ex.cpp)
add_library(solver STATIC /home/n3root/VadimSmD/workspace/projects/lab03/solver_lib/solver.cpp)
include_directories(/home/n3root/VadimSmD/workspace/projects/lab03/formatter_ex_lib)
include_directories(/home/n3root/VadimSmD/workspace/projects/lab03/formatter_lib)
include_directories(/home/n3root/VadimSmD/workspace/projects/lab03/solver_lib)
target_link_libraries(formatter_ex formatter)
add_executable(equation /home/n3root/VadimSmD/workspace/projects/lab03/solver_application/equation.cpp)
target_link_libraries(equation formatter_ex)
target_link_libraries(equation solver)
